# diary-cli

./: .gitignore  Cargo.toml  README.md  backup.ldb
src/: about.rs  archive.rs  cli.rs  entry.rs  export.rs  lib.rs  list.rs  logger.rs  main.rs  moc.rs  pull.rs  scribe.rs  search.rs  since.rs  sort.rs  uncommit.rs
src/entry/: section.rs
src/moc/: collection.rs
tests/: entry.rs  list.rs  section.rs  sort.rs
