[package]
name = "diary-cli"
version = "1.0.2"
edition = "2021"
description = "A powerful cli for documenting and keeping a diary."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
lazy-db = "1.5.3"
soulog = "1.1.0"
toml = "0.7.6"
clap = { version = "4.3.22", features = ["derive"] }