[package]
name = "diary-cli"
version = "1.3.5"
edition = "2021"
license = "GPL-3.0"
description = "A powerful cli for documenting and keeping a diary."
repository = "https://github.com/kalscium/diary-cli"
authors = [ "kalscium <kalscium@protonmail.com>" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
lazy-db = "1.5.3"
soulog = "1.2.0"
toml = "0.8.0"
clap = { version = "4.4.3", features = ["derive"] }
